fix: jumpble div margin

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,6 +69,7 @@ figcaption {
 
 .jumpable {
   scroll-margin-top: 8rem;
+  margin: 24px 0;
 }
 
 .equation-container {
